--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Daisy": {
+    "daisy": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Daisy",
+            "outputPath": "dist/daisy",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -25,7 +25,6 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -64,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Daisy:build"
+            "browserTarget": "daisy:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Daisy:build:production"
+              "browserTarget": "daisy:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Daisy:build"
+            "browserTarget": "daisy:build"
           }
         },
         "test": {
@@ -113,19 +112,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Daisy:serve"
+            "devServerTarget": "daisy:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Daisy:serve:production"
+              "devServerTarget": "daisy:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "Daisy",
+  "defaultProject": "daisy",
   "cli": {
-    "analytics": "8fcc4095-19f5-4039-9411-d5aba3030113"
+    "analytics": "f77a0c2e-f1a1-46fa-aa91-2fe18aa731be"
   }
 }
